src/bin/snapshots/cg2util__cli_create.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util\")"
---
Err(
    "Manipulates settings for unified control groups (cgroups v2)\n\nUsage: cg2util <COMMAND>\n\nCommands:\n  create    Creates a new control group\n  classify  Moves a running process to a different control group\n  control   Recursively lists or enables controllers in a control group\n  restrict  Sets restrictions in a control group\n  help      Print this message or the help of the given subcommand(s)\n\nOptions:\n  -h, --help     Print help\n  -V, --version  Print version\n",
)
