src/bin/snapshots/cg2util__cli_restrict-10.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util --auto restrict grp cpu.max=90000\")"
---
Err(
    "error: unexpected argument '--auto' found\n\n  tip: 'restrict --auto' exists\n\nUsage: cg2util <COMMAND>\n\nFor more information, try '--help'.\n",
)
