src/bin/snapshots/cg2util__cli_restrict-2.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util restrict grp\")"
---
Err(
    "error: the following required arguments were not provided:\n  <RESTRICTIONS>...\n\nUsage: cg2util restrict <CGROUP> <RESTRICTIONS>...\n\nFor more information, try '--help'.\n",
)
