src/bin/snapshots/cg2util__cli_restrict-3.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util restrict grp cpu\")"
---
Err(
    "error: invalid value 'cpu' for '<RESTRICTIONS>...': expected key=value\n\nFor more information, try '--help'.\n",
)
