src/bin/snapshots/cg2util__cli_restrict-4.snap
---
source: src/bin/cg2util.rs
expression: "cli(\"cg2util restrict grp cpu.max\")"
---
Err(
    "error: invalid value 'cpu.max' for '<RESTRICTIONS>...': expected key=value\n\nFor more information, try '--help'.\n",
)
